fix text overlap

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 table {
     width: 100%;
     border-color: #f4f4f4;
+    overflow: auto;
 }
 
 td {
@@ -84,15 +85,22 @@ button {
 }
 
 #inputLabel {
+    background-color: #BCE29E;
+    width: 100%;
+    max-width: 290px;
     height: 80px;
     font-size: 40px;
     vertical-align: bottom;
     text-align: right;
     padding-right: 16px;
     background-color: #ececec;
-    border-radius: 5px;
-    border: solid 1px rgb(73, 72, 72);
-    width: 100%;
-    overflow-x: hidden;
+    border-radius: 10px;
+    border: .5px solid rgb(155, 155, 155);
+    position: relative;
 }
 
+.screen{
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
